--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
 			<version>1.18.38</version>
 			<scope>provided</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-crypto -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-crypto</artifactId>
+			<version>6.4.5</version>
+		</dependency>
 	</dependencies>
 
 	<build>
