update, 2 test up, god
Finalmeente, schema y data mejorados para entendimiento con H2 sin perder la estructura original de oracle, solo adaptando. Cambios en testproduct el cuyal teste el SERVICE de este, TODOS LOS TEST PASADO, BORRADOR INICIALIZADO PARA EL EXITO

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -7,8 +7,9 @@ spring.datasource.username=sa      # Usuario por defecto de H2
 spring.datasource.password=        # Sin contraseña
 
 # Archivos que se ejecutan automáticamente al iniciar la BD (deben estar en src/main/resources)
-spring.sql.init.schema-locations=classpath:schema.sql    # Crea las tablas según tu modelo
-spring.sql.init.data-locations=classpath:data.sql       # Inserta datos de prueba (opcional)
+spring.sql.init.schema-locations=classpath:schema.sql
+spring.sql.init.data-locations=classpath:data.sql
+spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 
 # Configuración de JPA para que NO toque las tablas, solo trabaje con lo que le diste en el .sql
 spring.jpa.hibernate.ddl-auto=none
