--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,13 +1,16 @@
 spring.application.name=API
 
-# Conexión a Oracle Autonomous usando variables de entorno + Wallet
-# IMPORTANTE: estas variables deben estar seteadas en tu sistema o IDE
+## AquÃ­ se aÃ±aden las credenciales para la conexion a BD
+
 #spring.datasource.url=jdbc:oracle:thin:@(description= (retry_count=20)(retry_delay=3)(address=(protocol=tcps)(port=1521)(host=adb.sa-santiago-1.oraclecloud.com))(connect_data=(service_name=gddb836b3007d8e_perfulandiaspa_high.adb.oraclecloud.com))(security=(ssl_server_dn_match=yes)))
 spring.datasource.url=jdbc:oracle:thin:@${TNS_NAME}?TNS_ADMIN=${WALLET_DIR}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
-
-# Configuración JPA (Hibernate) para desarrollo
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# Configuraciones Swagger y ApiDoc
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/doc/swagger-ui.html
